# ferret

./: .gitignore  .hgignore  .travis.yml  Makefile.am  Makefile.in  PackageInfo.g  README  autogen.sh  build.sh  build_symmetry_detect.sh  configure  configure.ac  ferret.vars.in  gap-suppressions.valgrind  init.g  makedoc.g  makedocrel.g  read.g
.github/workflows/: CI.yml  ci.yml  release.yml
YAPB++/simple_graph/: simple_graph.cc  simple_graph.h  simple_parser.cc  sudoku.param.json  symmetry_detect.cc  symmetry_parse.cc
YAPB++/simple_graph/gason/: README.md  gason.cpp  gason.h
YAPB++/source/: canonical_image.hpp  constraint_store.hpp  constraint_store.ipp  memory_backtrack.hpp  partition_refinement.hpp  partition_stack.hpp  problem.hpp  search.hpp  search_common.hpp  search_options.hpp  solution_store.hpp  split_state.hpp  tunables.hpp
YAPB++/source/constraints/: abstract_constraint.hpp  edgecolouredgraph.hpp  edgecolouredgraph_gapgetter.hpp  fixallpoints.hpp  graph.hpp  liststab.hpp  normaliser.hpp  overlappingsetset.hpp  perm_group.hpp  setsetstab.hpp  setstab.hpp  settuplestab.hpp  slowgraph.hpp  stabchain_perm_group.hpp
YAPB++/source/queue/: abstract_queue.hpp  rbase_generating_queue.hpp  trace_following_queue.hpp  tracer.hpp  triggering_enums.hpp  triggering_events.hpp
YAPB++/source/rbase/: build_rbase.hpp  rbase.hpp
YAPB++/source/search/: search.hpp  search_common.hpp  search_options.hpp
YAPB++/tests/: build_rbase.cc  do_single_test.sh  run_tests.sh  solve_cycle_problem.cc  solve_cycle_problem_undirected.cc  solve_fix_graph_problem.cc  solve_simple_problem.cc  test_backtrack_partition.cc  test_branch_stack.cc  test_branch_stack_2.cc  test_combine_permutation.cc  test_complex_memory_stack.cc  test_empty_stack.cc  test_graph_init.cc  test_memory.cc  test_memory_stack.cc  test_permutation.cc  test_simple_problem.cc  vec1.cc
_data/: package.yml
cnf/: pkgconfig.h.in
doc/: chap0.html  chap0.html-e  chap0.txt  chap0_mj.html  chap0_mj.html-e  chap1.html  chap1.txt  chap1_mj.html  chap1_mj.html-e  chap2.html  chap2.html-e  chap2.txt  chap2_mj.html  chap2_mj.html-e  chap3.html  chap3.txt  chap3_mj.html  chap3_mj.html-e  chapInd.html  chapInd.html-e  chapInd.txt  chapInd_mj.html  example.xml  ferret.xml  hints.xml  install.xml  main.aux  main.idx  main.ilg  main.ind  main.out  main.pnr  main.tex  main.toc  main.xml  manual.bib  manual.lab  manual.six  manual.xml  solve.xml  (+1 more)
gap_cpp_headers/: gap_cpp_mapping.hpp  gap_exception.h  gap_exception.hpp  gap_function.hpp  gap_helper.h  include_gap_headers.h  include_gap_headers.hpp  optional.hpp  vec1.hpp
lib/: allMinimalImages.g  helper_functions.g  overloadmethods.gd  overloadmethods.gi  smallestImage.gd  smallestImage.gi  yapb.gd  yapb.gi
lib/set_smallest_image/: nsi.g  nsi_horriblesetsethack.g
nongap-tst/graphs/: download_graphs.sh  test_all_graphs.sh
nongap-tst/scripts/: check_graph_syms.sh  check_groups_equal.sh  gapbliss.sh
nongap-tst/symmetry_detect/: jsonToGap.py  run_savilerow_symmetry_tests.sh  run_symmetry_detect_symmetry_tests.sh  symmetry_detect_test.sh
nongap-tst/symmetry_detect/savilerow_symmetry_tests/: allDifferent.eprime  allDifferent.expectedGroup.json  allDifferent3.eprime  allDifferent3.expectedGroup.json  atleast1.expectedGroup.json  atmost1.eprime  atmost2.expectedGroup.json  basic_matrix_op.eprime  basic_matrix_op.expectedGroup.json  compoundMatrix.eprime  element2.expectedGroup.json  element3.eprime  gcc2.eprime  gcc2.expectedGroup.json  sum.eprime  table.eprime  table.expectedGroup.json
scripts/: check_graph_syms.sh  check_groups_equal.sh  fixblissoutput.py  gap-suppressions.valgrind  parse_output.py  quick_test.sh  run_all_tests.sh
src/: StabChainStore.hpp  c_to_cpp.h  cppmapper.cc  ferret.cc  gap_helper.h  hellod.cc  include_gap_headers.h
src/gap_cpp_headers/: gap_function.h  gap_helper.h
src/generated_headers/: RNamNames_list.h  function_objs.h
tst/: random_obj.g  test_findallimages.tst  test_functions.g  test_minimage.tst  test_minimage2.tst  test_minimage3.tst  testall.g  testall.tst  testbasic.tst  testintersect.tst  testlong.g  testslow.tst  teststabs.tst  teststabs2.tst  teststabsoverloads.tst  testvalgrind.g  testvalgrind.tst  trans-4  trans-5
tst/graphs/: cycle3.graph  cycle4.graph  double-cycle.graph  test_all_graphs.sh
tst/symmetry_detect/: jsonToGap.py  jsonToListNotation.py  run_savilerow_symmetry_tests.sh  symmetry_detect_test.py  symmetry_detect_test.sh
tst/symmetry_detect/savilerow_symmetry_tests/: absoluteTest.eprime  allDifferent2.eprime  allDifferent2.expectedGroup.json  atmost2.eprime  basic_matrix_op.eprime  basic_op.eprime  basic_op.expectedGroup.json  element.eprime  element2.eprime  equals.eprime  gcc.eprime  gcc.eprime.expectedGroup.json  sum.expectedGroup.json
tst/symmetry_detect/symmetry_detect_tests/: absoluteTest.expectedGroup.json  absoluteTest.graph.json  allDifferent.graph.json  compoundMatrix.graph.json  equals.expectedGroup.json  equals.graph.json  gcc.graph.json  gcc2.graph.json
tst/tstfiles/: advancedgraph.tst  testbasic.tst  testintersect.tst  teststabs.tst  teststabs2.tst  teststabsoverloads.tst  testvalgrind.tst
